addysnip/base/ui-docs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-docs
  namespace: addysnip
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-addysnip-ui-docs
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-addysnip-ui-docs
    spec:
      containers:
      - image: nginx:alpine
        imagePullPolicy: Always
        name: ui-docs
        ports:
        - containerPort: 80
          name: 80tcp
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: gar-json-key
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
