addysnip/base/ui-docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-docs
  namespace: addysnip
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 80tcp
    port: 80
  selector:
    workload.user.cattle.io/workloadselector: apps.deployment-addysnip-ui-docs
