addysnip/base/ui-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-docs
  namespace: addysnip
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: docs.addysnip.com
    http:
      paths:
      - backend:
          service:
            name: ui-docs
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - docs.addysnip.com
    secretName: addysnip-com-tls
